--- a/src/components/history/Message.css
+++ b/src/components/history/Message.css
@@ -10,6 +10,10 @@
 .message-green{
     background-color: #dcf8c6;
 }
+.message-blue{
+    background-color: rgb(0, 153, 255);
+}
+
 .message-date{
     font-style: italic;
     font-size: 12px;
@@ -24,4 +28,18 @@
     padding: 20px;
     max-height: 600px;
     overflow-y: scroll;
+}
+
+.history-list-window-messenger{
+    background: #fdfcfb;
+    display: inline-block;
+    padding: 20px;
+    max-height: 600px;
+    overflow-y: scroll;
+}
+.white-text{
+    color: #fff
+}
+.black-text{
+    color: rgba(0, 0, 0, 1);
 }
